I've addeed a class to crypt passwords

--- a/app/src/main/res/layout/activity_preregistro.xml
+++ b/app/src/main/res/layout/activity_preregistro.xml
@@ -65,15 +65,15 @@
             <EditText
                 android:id="@+id/txtDescripcion"
                 android:layout_width="313dp"
-                android:layout_height="300dp"
+                android:layout_height="47dp"
+                android:backgroundTint="#313E69"
                 android:ems="10"
+                android:hint="Describa su malestar"
                 android:inputType="textPersonName"
+                android:maxLines="15"
                 android:text=""
                 android:textColor="@color/black"
-                android:hint="Describa su malestar"
-                android:textColorHint="#696969"
-                android:backgroundTint="#313E69"
-                android:maxLines="15"/>
+                android:textColorHint="#696969" />
 
             <EditText
                 android:id="@+id/txtPeso"
